--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <input type="number" id="distance" step="0.01" required>
   </label>
   <label>Time (hh:mm:ss):
-    <input type="text" id="time" placeholder="hh:mm:ss" required>
+    <!-- ✅ improved: enforce time input with seconds -->
+    <input type="time" id="time" step="1" required>
   </label>
   <button type="submit">Add Run</button>
 </form>
@@ -177,38 +178,48 @@ async function fetchActivities(){
 
   // ✅ Past Activities Table
   activitiesTable.innerHTML="";
-  filtered.forEach(r=>{
-    const row=document.createElement("tr");
-    const cleanDate = formatDate(r.date);
-    row.innerHTML=`
-      <td>${cleanDate}</td>
-      <td>${r.name}</td>
-      <td>${r.distance}</td>
-      <td>${r.time}</td>
-      <td>${calcPace(r.distance, r.time)}</td>`;
-    activitiesTable.appendChild(row);
-  });
+  if(filtered.length === 0){
+    activitiesTable.innerHTML = "<tr><td colspan='5'>No runs yet</td></tr>";
+  } else {
+    filtered.forEach(r=>{
+      const row=document.createElement("tr");
+      const cleanDate = formatDate(r.date);
+
+      row.innerHTML=`
+        <td>${cleanDate}</td>
+        <td>${r.name}</td>
+        <td>${r.distance}</td>
+        <td>${r.time}</td>
+        <td>${calcPace(r.distance, r.time)}</td>`;
+      activitiesTable.appendChild(row);
+    });
+  }
 
   // ✅ Leaderboard
   const summary={};
   activities.forEach(r=>{
     const secs=timeToSeconds(r.time);
     if(!summary[r.name]) summary[r.name]={dist:0,time:0};
-    summary[r.name].dist+=parseFloat(r.distance);
-    summary[r.name].time+=secs;
+    // ✅ ensure commas don't break parseFloat
+    summary[r.name].dist += parseFloat(String(r.distance).replace(",", "."));
+    summary[r.name].time += secs;
   });
 
   const sorted=Object.entries(summary).sort((a,b)=>b[1].dist-a[1].dist);
   leaderboardTable.innerHTML="";
-  sorted.forEach(([name,vals])=>{
-    const row=document.createElement("tr");
-    row.innerHTML=`
-      <td>${name}</td>
-      <td>${vals.dist.toFixed(2)}</td>
-      <td>${secondsToHMS(vals.time)}</td>
-      <td>${getBadge(vals.dist)}</td>`;
-    leaderboardTable.appendChild(row);
-  });
+  if(sorted.length === 0){
+    leaderboardTable.innerHTML = "<tr><td colspan='4'>No runners yet</td></tr>";
+  } else {
+    sorted.forEach(([name,vals])=>{
+      const row=document.createElement("tr");
+      row.innerHTML=`
+        <td>${name}</td>
+        <td>${vals.dist.toFixed(2)}</td>
+        <td>${secondsToHMS(vals.time)}</td>
+        <td>${getBadge(vals.dist)}</td>`;
+      leaderboardTable.appendChild(row);
+    });
+  }
 }
 
 // --- Form submission ---
