--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 <script>
 // ✅ Use Netlify Proxy instead of direct Apps Script
-const scriptUrl = "/.netlify/functions/proxy";
+const scriptUrl = "/api/proxy"";
 
 const runForm = document.getElementById("runForm");
 const activitiesTable = document.getElementById("activitiesTable");
@@ -245,3 +245,4 @@ fetchActivities();
 </script>
 </body>
 </html>
+
